--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="btn-sci">
                         <a href="" class="btn" onclick="btn()">View CV</a>
                         <div class="sci">
-                            <a href="https://www.instagram.com/michael_tobenna234/">
+                            <a href="https://www.instagram.com/mike_tobit/">
                                 <i class="bx bxl-instagram"></i>
                                 <span class="tooltip">Instagram</span>
                             </a>
